2008-12-10 Braden McDaniel  <braden@endoframe.com>

	* src/Makefile.am: Build libraries with -no-undefined.

2008-11-24 Braden McDaniel  <braden@endoframe.com>

	Provide access to a PROTO instance's implementation nodes.

	* src/libopenvrml/openvrml/browser.cpp
	(openvrml::externproto_node): Override
	openvrml::node::do_impl_nodes.
	(openvrml::externproto_node::do_impl_nodes() const): If there is
	an implementation, return the implementation's nodes.
	* src/libopenvrml/openvrml/local/proto.cpp
	(openvrml::local::proto_node): Override
	openvrml::node::do_impl_nodes.
	(openvrml::local::proto_node::do_impl_nodes() const): Return the
	implementation nodes.
	* src/libopenvrml/openvrml/node.cpp
	(openvrml::node::impl_nodes() const): Delegate to
	node::do_impl_nodes.
	(openvrml::node::do_impl_nodes() const): Default implementation
	returns an empty vector.
	(openvrml::is_proto_instance(const node &)): Return true if a node
	is a PROTO instance; false otherwise.
	* src/libopenvrml/openvrml/node.h
	(openvrml::node): Added member functions impl_nodes and
	do_impl_nodes.
	(openvrml::is_proto_instance(const node &)): Added; detects if a
	node instance is a PROTO instance.

2008-11-23 Braden McDaniel  <braden@endoframe.com>

	Use trailing underscore convention for private variables in
	openvrml::local::proto_node.

	* src/libopenvrml/openvrml/local/proto.cpp

2008-11-23 Braden McDaniel  <braden@endoframe.com>

	Use trailing underscore convention for private variables in
	openvrml::local::proto_node_metatype.

	* src/libopenvrml/openvrml/local/proto.cpp
	* src/libopenvrml/openvrml/local/proto.h

2008-11-22 Braden McDaniel  <braden@endoframe.com>

	Made openvrml::node_traverser::halted and
	openvrml::node_traverser::traversed const.

	* src/libopenvrml/openvrml/node.cpp
	(openvrml::node_traverser::halted() const): Made const.
	(openvrml::node_traverser::traversed(node &) const): Made const.
	* src/libopenvrml/openvrml/node.h